refactored and simplified variable names

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <label>Briefly describe yourself</label>
-      <textarea id="personal-description" class="u-full-width"></textarea>
+      <textarea id="self-bio" class="u-full-width"></textarea>
 
       <h2>Contact</h2>
 
@@ -62,7 +62,7 @@
         </div>
         <div class="six columns">
           <h2>Generated HTML</h2>
-          <pre><code><p id="update-html">
+          <pre><code><p id="html-preview">
             THIS IS WHERE THE RAW HTML SHOULD APPEAR
           </p></code></pre>
         </div>
